# xentool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  api.txt  guide.txt
.cargo/: config.toml
assets/: editor.css  editor.html  editor.js  live.css  live.html  live.js
docs/: README-patchbox.md  README.md  wooting_implementation_details.md
scripts/: _run-all-common.bat  _run-all-edit.bat  _run-all-piano-studio.bat  _run-all-studio.bat  _run-all-supercollider.bat  _run-all-xentool.bat  dev-stack.bat  install-linux-common.sh  install-linux-exquis.sh  install-linux-wooting.sh  install-wooting-sdks.ps1  install-wooting-sdks.sh  install.bat  install.sh  msvc-link.cmd  probe-exquis-usb.ps1  run-all-exquis.bat  run-all-win11.bat  run-all-windows.bat  run-all-wooting.bat  serve-exquis.bat  serve-exquis.sh  serve-wooting.bat  serve-wooting.sh  start-supercollider.bat  start-supercollider.sh  start-xenharm.bat  start-xentool.bat  tuninginfo.py
src/: cli.rs  config.rs  edit.rs  geometry.rs  layouts.rs  logging.rs  main.rs  midi.rs  midi_out.rs  mpe.rs  mts.rs  settings.rs  tuning.rs  ui.rs  xtn.rs
src/exquis/: commands.rs  hud_ctx.rs  midi.rs  mod.rs  mpe.rs  proto.rs  tuning.rs  ui.rs  usb.rs  winmm_drv.rs
src/hud/: chordnam.rs  mod.rs  osc.rs  publisher.rs  server.rs  state.rs  tui_url.rs  xenharm.rs
src/wooting/: analog.rs  commands.rs  control_bar.rs  geometry.rs  hidmap.rs  hud_ctx.rs  mod.rs  modes.rs  rgb.rs  serve.rs  ui.rs  wtn.rs
supercollider/: midi_piano_xentool.scd  mpe_tanpura_xentool.scd  mpe_tanpura_xentool_v1.scd
supercollider/piano_studio/: .gitignore  README.md  requirements.txt  server.py
supercollider/piano_studio/web/: app.js  index.html
supercollider/tanpura_studio/: README.md  server.py
supercollider/tanpura_studio/presets/: _default.json
supercollider/tanpura_studio/web/: app.js  index.html  style.css
supercollider/tests/tanpura/: .gitignore  README.md  analyze_renders.py  compare_scratch_vs_clean.py  compare_v1_v2.py  tanpura_bisect.scd  tanpura_bisect_g5.scd  tanpura_bisect_v4chain.scd  tanpura_replay_static.scd  tanpura_test_rig.scd  (+17 more)
wtn/: edo12.wtn  edo19.wtn  edo24.wtn  edo29.wtn  edo31.wtn  edo53.wtn
xenharm_service/: README.md  install-systemd.sh  server.py  start_xenharm_service.bat  start_xenharm_service.sh  xenharm.service
xtn/: edo24.xtn  edo31.xtn  edo53.xtn
