[package]
name = "xentool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
crossterm = "0.28"
directories = "5.0"
midir = "0.10"
ratatui = "0.29"
rusb = { version = "0.9", features = ["vendored"] }
libloading = "0.8"
open = "5"
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }

# Wooting support (see src/wooting/). Both Analog and RGB SDKs are loaded at
# runtime via libloading; no compile-time dependency on a Rust wrapper crate.
crossbeam-channel = "0.5"

[dev-dependencies]
assert_matches = "1.5"
