[package]
name = "xentool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
crossterm = "0.28"
directories = "5.0"
midir = "0.10"
ratatui = "0.29"
rusb = { version = "0.9", features = ["vendored"] }
libloading = "0.8"
open = "5"
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }

# Wooting support (see src/wooting/). Both Analog and RGB SDKs are loaded at
# runtime via libloading; no compile-time dependency on a Rust wrapper crate.
crossbeam-channel = "0.5"

# Live HUD (see src/hud/). Hot loops publish snapshots through a lock-free
# atomic pointer swap so the audio path never blocks on JSON or I/O.
arc-swap = "1.7"
# HTTP client for the optional xenharm sidecar (note-name glyphs). Tiny
# synchronous client; runs on a background thread so the SSE/HTTP path
# never blocks waiting on it.
ureq = { version = "2.10", default-features = false, features = ["json"] }
# Clipboard support for the HUD-URL fallback modal — used when the TUI
# can't open a browser (console-only environment).
arboard = "3.6"
# OSC ingestion for the HUD — SuperCollider (or any OSC client) can push
# parameter values that the HUD displays alongside the played notes.
rosc = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
jack = "0.11"
alsa = "0.9"

[dev-dependencies]
assert_matches = "1.5"
